tests/error/iter_errors/end_wrong_type.err
Error: Not an iterator (at $FILE:37:13)
   | 
35 | @guppy(module)
36 | def test(x: MyType) -> None:
37 |     for _ in x:
   |              ^ Expression of type `MyIter` is not an iterator

Help: Fix signature of method `MyIter.__end__`:  Expected `MyIter -> None`, got
`MyIter -> MyIter`

Guppy compilation failed due to 1 previous error
